--- a/configure.ac
+++ b/configure.ac
@@ -26,7 +26,7 @@ AC_TYPE_SIZE_T
 
 # Checks for library functions.
 AC_FUNC_ALLOCA
-AC_CHECK_FUNCS([memset strcasecmp strndup strstr])
+AC_CHECK_FUNCS([memset strcasecmp strndup strstr strndupa])
 
 AC_CONFIG_FILES([Makefile
                  lib/Makefile
