Adding examples directory

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,9 @@
 #
 SUBDIRS = lib src
-EXTRA_DIST = autogen.sh README
+EXTRA_DIST = autogen.sh README \
+	examples/Makefile \
+	examples/obten_digito.c \
+	examples/obten_homonimia.c \
+	examples/obten_rfc.c
 
 CLEANFILES = *~ core* *.core
