New function to only verify the RFC, and example addition

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,7 @@ EXTRA_DIST = autogen.sh README.md \
 	examples/Makefile \
 	examples/obten_digito.c \
 	examples/obten_homonimia.c \
-	examples/obten_rfc.c
+	examples/obten_rfc.c \
+	examples/verifica_rfc.c
 
 CLEANFILES = *~ core* *.core
