--- a/examples/Makefile
+++ b/examples/Makefile
@@ -20,11 +20,15 @@ DIG_EXE		:= obten_digito
 DIG_SOURCE	:= obten_digito.c
 DIG_OBJ		:= obten_digito.o
 
+VER_EXE		:= verifica_rfc
+VER_SRC		:= verifica_rfc.c
+VER_OBJ		:= verifica_rfc.o
+
 # Targets
 .SUFFIXES:	.c .o
 .PHONY:		clean
 
-all: $(RFC_EXE) $(HOMO_EXE) $(DIG_EXE)
+all: $(RFC_EXE) $(HOMO_EXE) $(DIG_EXE) $(VER_EXE)
 
 $(RFC_EXE): $(RFC_OBJ)
 	$(CC) $(DBG) -o $@ $(RFC_OBJ) $(LIBS)
@@ -35,8 +39,11 @@ $(HOMO_EXE): $(HOMO_OBJ)
 $(DIG_EXE): $(DIG_OBJ)
 	$(CC) $(DBG) -o $@ $(DIG_OBJ) $(LIBS)
 
+$(VER_EXE): $(VER_OBJ)
+	$(CC) $(DBG) -o $@ $(VER_OBJ) $(LIBS)
+
 clean:
-	rm -f $(RFC_EXE) $(HOMO_EXE) $(DIG_EXE) $(RFC_OBJ) $(HOMO_OBJ) $(DIG_OBJ)
+	rm -f $(RFC_EXE) $(HOMO_EXE) $(DIG_EXE) $(RFC_OBJ) $(HOMO_OBJ) $(DIG_OBJ) $(VER_EXE) $(VER_OBJ)
 
 # Rules
 $(RFC_OBJ): $(RFC_SRC)
@@ -48,5 +55,9 @@ $(HOMO_OBJ): $(HOMO_SRC)
 	$(CC) $(CCFLAGS) -c $< -o $@
 
 $(DIG_OBJ): $(DIG_SRC)
+	@echo compiling $< ...
+	$(CC) $(CCFLAGS) -c $< -o $@
+
+$(VER_OBJ): $(VER_SRC)
 	@echo compiling $< ...
 	$(CC) $(CCFLAGS) -c $< -o $@
