Adding the directory js/

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,9 @@ EXTRA_DIST = autogen.sh README.md \
 	examples/obten_digito.c \
 	examples/obten_homonimia.c \
 	examples/obten_rfc.c \
-	examples/verifica_rfc.c
+	examples/verifica_rfc.c \
+	js/README.md \
+	js/jquery.digito_verificador.js \
+	js/rfc.html
 
 CLEANFILES = *~ core* *.core
