--- a/configure.ac
+++ b/configure.ac
@@ -2,9 +2,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.64])
-AC_INIT([inere], [0.0.1], [egamez@edisson.com.mx])
+AC_INIT([inere], [0.0.4], [egamez@edisson.com.mx])
 AC_CONFIG_SRCDIR([src/rfc.c])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
 AC_PROG_CC
@@ -25,8 +26,7 @@ AC_CHECK_HEADERS([stdlib.h string.h])
 AC_TYPE_SIZE_T
 
 # Checks for library functions.
-AC_FUNC_ALLOCA
-AC_CHECK_FUNCS([memset strcasecmp strndup strstr strndupa])
+AC_CHECK_FUNCS([strsep strcasecmp])
 
 AC_CONFIG_FILES([Makefile
                  lib/Makefile
