Adding new program, verificasellodigital

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 #
-bin_PROGRAMS = cantidad rfc
+bin_PROGRAMS = cantidad rfc sello
 
 cantidad_SOURCES = cantidad.c
 cantidad_LDFLAGS = $(top_srcdir)/lib/libinere.la
@@ -7,6 +7,9 @@ cantidad_LDFLAGS = $(top_srcdir)/lib/libinere.la
 rfc_SOURCES = rfc.c
 rfc_LDFLAGS = $(top_srcdir)/lib/libinere.la
 
+sello_SOURCES = sello.c
+sello_LDFLAGS = $(top_srcdir)/lib/libinere.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
+
 CLEANFILES = *~
 
-AM_CPPFLAGS = -D_GNU_SOURCE -pedantic -pedantic-errors -Wextra -Wall -W -fPIC -pipe -funsigned-char -ansi -pthread -I$(top_srcdir)/include
+AM_CPPFLAGS = -D_GNU_SOURCE -pedantic -pedantic-errors -Wextra -Wall -W -fPIC -pipe -funsigned-char -ansi -pthread -I$(top_srcdir)/include $(XML2_INCLUDE)
