--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,15 +1,19 @@
 #
+
 lib_LTLIBRARIES = libinere.la
 libinere_la_SOURCES = cantidades.c homonimia.c numerales.c personafisica.c \
-		      verificador.c util.c
+		      personamoral.c verificador.c util.c \
+		      verifica_sello_digital.c
 nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cantidades.h \
 		$(top_srcdir)/include/inere/homonimia.h \
 		$(top_srcdir)/include/inere/numerales.h \
 		$(top_srcdir)/include/inere/personafisica.h \
+		$(top_srcdir)/include/inere/personamoral.h \
 		$(top_srcdir)/include/inere/verificador.h \
+		$(top_srcdir)/include/inere/verifica_sello_digital.h \
 		$(top_srcdir)/include/inere/util.h
-AM_CPPFLAGS = -D_GNU_SOURCE -pedantic -pedantic-errors -Wextra -Wall -W -fPIC -pipe -funsigned-char -ansi -pthread -I$(top_srcdir)/include
-libinere_la_LDFLAGS = -version-info 0:5:0
-INCLUDES = -I$(top_srcdir)
+INCLUDES = -I$(top_srcdir) -I$(EDISSON_OPENSSL_INCDIR) $(XML2_INCLUDE) $(XSLT_INCLUDE)
+AM_CPPFLAGS = -D_GNU_SOURCE -pedantic -pedantic-errors -Wall -W -fPIC -pipe -funsigned-char -ansi -pthread -I$(top_srcdir)/include $(INCLUDES)
+libinere_la_LDFLAGS = -version-info 1:1:0
 CLEANFILES = *~
 library_includedir = $(includedir)/inere
