New defines to include some more libraries

--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,11 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Define if you have the <openssl/pem.h> header */
+#undef EDISSON_HAVE_OPENSSL
+
+/* Directory where the OpenSSL headers files are */
+#undef EDISSON_OPENSSL_INCDIR
+
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
