Adding the extra libraries to compile correctly

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,10 +2,10 @@
 bin_PROGRAMS = cantidad rfc sello
 
 cantidad_SOURCES = cantidad.c
-cantidad_LDFLAGS = $(top_srcdir)/lib/libinere.la
+cantidad_LDFLAGS = $(top_srcdir)/lib/libinere.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
 
 rfc_SOURCES = rfc.c
-rfc_LDFLAGS = $(top_srcdir)/lib/libinere.la
+rfc_LDFLAGS = $(top_srcdir)/lib/libinere.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
 
 sello_SOURCES = sello.c
 sello_LDFLAGS = $(top_srcdir)/lib/libinere.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
