Adding some files to be distributed, and removing some other already dropped

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,15 +1,16 @@
 #
 SUBDIRS = lib src
 EXTRA_DIST = autogen.sh README.md \
-	examples/Makefile \
+	examples/Makefile.in \
 	examples/obten_digito.c \
 	examples/obten_homonimia.c \
 	examples/obten_rfc.c \
 	examples/verifica_rfc.c \
 	python/inere.c \
-	python/setup.py \
+	python/setup.py.in \
 	js/README.md \
-	js/jquery.rfc_digito_verificador.js \
+	js/jquery.rfc_tester.js \
+	js/jquery.rfc_tester.min.js \
 	js/rfc.html
 
 CLEANFILES = *~ core* *.core
