--- a/configure.ac
+++ b/configure.ac
@@ -17,6 +17,16 @@ AC_PROG_LIBTOOL
 # For automake
 AM_INIT_AUTOMAKE
 
+# Checks for header files.
+AC_CHECK_HEADERS([stdlib.h string.h])
+
+# Checks for typedefs, structures, and compiler characteristics.
+AC_TYPE_SIZE_T
+
+# Checks for library functions.
+AC_CHECK_FUNCS([strsep strcasecmp])
+
+
 # Checks for libraries.
 
 # xml2
@@ -32,14 +42,10 @@ AC_MSG_NOTICE([using XMl2 headers at $with_xml2_include])
 with_xml2_lib=`$XML2_CONFIG --prefix`
 AC_MSG_NOTICE([using XML2 libraries at $with_xml2_lib])
 
-AC_SUBST(with_xml2_lib)
-AC_SUBST(with_xml2_include)
 XML2_LIB=`$XML2_CONFIG --libs`
 AC_SUBST(XML2_LIB)
 XML2_INCLUDE=`$XML2_CONFIG --cflags`
 AC_SUBST(XML2_INCLUDE)
-XML2_PREFIX=`$XML2_CONFIG --prefix`
-AC_SUBST(XML2_PREFIX)
 
 # xslt
 AC_PATH_PROG(XSLT_CONFIG, xslt-config)
@@ -54,8 +60,6 @@ AC_MSG_NOTICE([using XSLT headers at $with_xslt_include])
 with_xslt_lib=`$XSLT_CONFIG --prefix`
 AC_MSG_NOTICE([using XSLT libraries at $with_xslt_lib])
 
-AC_SUBST(with_xslt_lib)
-AC_SUBST(with_xslt_include)
 XSLT_LIB=`$XSLT_CONFIG --libs`
 AC_SUBST(XSLT_LIB)
 XSLT_INCLUDE=`$XSLT_CONFIG --cflags`
@@ -63,27 +67,27 @@ AC_SUBST(XSLT_INCLUDE)
 
 
 # OpenSSL
-AC_DEFINE([EDISSON_OPENSSL_INCDIR], [/usr/include], [Directory where the OpenSSL headers files are])
-EDISSON_OPENSSL_INCDIR="$opensslhdrval"
-AC_SUBST(EDISSON_OPENSSL_INCDIR)
-#AC_MSG_RESULT($opensslhdrval)
-
-opensslhdr=yes
-AC_CHECK_HEADERS(openssl/pem.h ,AC_DEFINE(EDISSON_HAVE_OPENSSL,1,
-[Define if you have the <openssl/pem.h> header]),
-opensslhdr=no)
+OPENSSL_INC_DIR=
+AC_ARG_WITH([openssl],
+	[AS_HELP_STRING([--with-openssl@<:@=PATH@:>@],
+		[Especifica la ruta de instalacion de la libreria OpenSSL @<:@default=/usr@:>@])],
+	[
+		LIBS="-L$withval/lib ${LIBS}"
+		LDFLAGS="${LDFLAGS} -L$withval/lib"
+		CFLAGS="${CFLAGS} -I$withval/include"
+		OPENSSL_INC_DIR="$withval/include"
+	],
+	[
+		LIBS="-L/usr/lib ${LIBS}"
+		LDFLAGS="${LDFLAGS} -L/usr/lib"
+		CFLAGS="${CFLAGS} -I/usr/include"
+		OPENSSL_INC_DIR="/usr/include"
+	])
+AC_SUBST(OPENSSL_INC_DIR)
+AC_CHECK_HEADERS([openssl/evp.h])
 OPENSSL_LIBS=
-AC_CHECK_LIB(crypto,X509_get_pubkey,OPENSSL_LIBS="-lcrypto $OPENSSL_LIBS")
+AC_CHECK_LIB(crypto, X509_get_pubkey, OPENSSL_LIBS="-lcrypto")
 AC_SUBST(OPENSSL_LIBS)
-
-# Checks for header files.
-AC_CHECK_HEADERS([stdlib.h string.h])
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_TYPE_SIZE_T
-
-# Checks for library functions.
-AC_CHECK_FUNCS([strsep strcasecmp])
 
 AC_CONFIG_FILES([Makefile
                  lib/Makefile
