Added examples/moral.c and examples/extrae.c files, and ACLOCAL_AMFLAGS variable

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,8 @@ EXTRA_DIST = autogen.sh README.md \
 	examples/obten_homonimia.c \
 	examples/obten_rfc.c \
 	examples/verifica_rfc.c \
+	examples/moral.c \
+	examples/extrae.c \
 	python/inere.c \
 	python/setup.py.in \
 	js/README.md \
@@ -14,3 +16,4 @@ EXTRA_DIST = autogen.sh README.md \
 	js/rfc.html
 
 CLEANFILES = *~ core* *.core
+ACLOCAL_AMFLAGS = -I m4
