--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.64])
-AC_INIT([inere], [0.1.1], [egamez@edisson.com.mx])
+AC_INIT([inere], [0.2.0], [egamez@edisson.com.mx])
 AC_CONFIG_SRCDIR([src/rfc.c])
 AC_CONFIG_HEADERS([include/inere/config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -114,6 +114,8 @@ AC_DEFINE_UNQUOTED([INERE_LOCAL_CHARSET], ["$DEFAULT_CHARSET"], [Character set t
 
 AC_CONFIG_FILES([Makefile
                  lib/Makefile
+                 lib/src/Makefile
+                 lib/cfdi/Makefile
                  src/Makefile
 		 examples/Makefile
 		 python/setup.py])
