--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,13 +2,13 @@
 bin_PROGRAMS = cantidad rfc sello
 
 cantidad_SOURCES = cantidad.c
-cantidad_LDFLAGS = $(top_srcdir)/lib/libinere.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
+cantidad_LDFLAGS = $(top_srcdir)/lib/src/libinere.la
 
 rfc_SOURCES = rfc.c
-rfc_LDFLAGS = $(top_srcdir)/lib/libinere.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
+rfc_LDFLAGS = $(top_srcdir)/lib/src/libinere.la
 
 sello_SOURCES = sello.c
-sello_LDFLAGS = $(top_srcdir)/lib/libinere.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
+sello_LDFLAGS = $(top_srcdir)/lib/cfdi/libinerecfdi.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
 
 INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE)
 
