New auxiliar library to send emails via libcURL added

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 #
-bin_PROGRAMS = cantidad rfc sello
+bin_PROGRAMS = cantidad rfc sello envia
 
 cantidad_SOURCES = cantidad.c
 cantidad_LDFLAGS = $(top_srcdir)/lib/src/libinere.la
@@ -10,6 +10,11 @@ rfc_LDFLAGS = $(top_srcdir)/lib/src/libinere.la
 sello_SOURCES = sello.c
 sello_LDFLAGS = $(top_srcdir)/lib/cfdi/libinerecfdi.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
 
-INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE)
+envia_SOURCES = envia.c
+envia_LDFLAGS = $(top_srcdir)/lib/envia/libinereenvia.la \
+		$(top_srcdir)/lib/src/libinere.la \
+                $(CURL_LIBS) $(UUID_LIBS)
+
+INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(CURL_INCLUDES) $(UUID_INCLUDES)
 
 AM_CFLAGS = -Wall -Wextra -Winit-self -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
