--- a/lib/cfdi/Makefile.am
+++ b/lib/cfdi/Makefile.am
@@ -1,11 +1,13 @@
 #
 
 lib_LTLIBRARIES = libinerecfdi.la
-libinerecfdi_la_SOURCES = verifica_sello_digital.c
+libinerecfdi_la_SOURCES = verifica_sello_digital.c certificado.c sello.c
 
 libinerecfdi_la_LDFLAGS = -version-info 0:1:0
 
-nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cfdi/verifica_sello_digital.h
+nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cfdi/verifica_sello_digital.h \
+			$(top_srcdir)/include/inere/cfdi/certificado.h \
+			$(top_srcdir)/include/inere/cfdi/sello.h
 
 INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(XSLT_INCLUDE)
 
