--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,9 @@ rfc_SOURCES = rfc.c
 rfc_LDFLAGS = $(top_srcdir)/lib/src/libinere.la
 
 sello_SOURCES = sello.c
-sello_LDFLAGS = $(top_srcdir)/lib/cfdi/libinerecfdi.la $(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
+sello_LDFLAGS = $(top_srcdir)/lib/cfdi/libinerecfdi.la \
+		$(top_srcdir)/lib/src/libinere.la \
+		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
 
 envia_SOURCES = envia.c
 envia_LDFLAGS = $(top_srcdir)/lib/envia/libinereenvia.la \
