--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -4,8 +4,8 @@ module1 = Extension('inere',
 		    define_macros = [('MAJOR_VERSION', '0'),
 				     ('MINOR_VERSION', '3')],
 		    include_dirs = ['../include', '/usr/local/include', '@XML2_PREFIX@/include/libxml2'],
-		    library_dirs = ['../lib/.libs', '@XML2_PREFIX@/lib', '/usr/local/lib'],
-		    libraries = ['inere', 'inerecfdi','crypto', 'xslt', 'xml2'],
+		    library_dirs = ['../lib/src/.libs', '../lib/cfdi/.libs', '@XML2_PREFIX@/lib', '/usr/local/lib'],
+		    libraries = ['inere', 'inerecfdi', 'crypto', 'xslt', 'xml2'],
 		    sources = ['inere.c'])
 
 setup (	name = 'inere',
