--- a/lib/cfdi/Makefile.am
+++ b/lib/cfdi/Makefile.am
@@ -2,14 +2,15 @@
 
 lib_LTLIBRARIES = libinerecfdi.la
 libinerecfdi_la_SOURCES = verifica_sello_digital.c certificado.c sello.c \
-			  genera_cadena_original.c
+			  genera_cadena_original.c crea_cfdi.c
 
 libinerecfdi_la_LDFLAGS = -version-info 0:1:0
 
 nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cfdi/verifica_sello_digital.h \
 			$(top_srcdir)/include/inere/cfdi/certificado.h \
 			$(top_srcdir)/include/inere/cfdi/genera_cadena_original.h \
-			$(top_srcdir)/include/inere/cfdi/sello.h
+			$(top_srcdir)/include/inere/cfdi/sello.h \
+			$(top_srcdir)/include/inere/cfdi/crea_cfdi.h
 
 INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(XSLT_INCLUDE)
 
