--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,5 +1,5 @@
 #
-bin_PROGRAMS = sello certificado
+bin_PROGRAMS = sello certificado cadena comprobante
 
 sello_SOURCES = sello.c
 sello_LDFLAGS = $(top_srcdir)/lib/cfdi/libinerecfdi.la \
@@ -10,6 +10,17 @@ certificado_SOURCES = certificado.c
 certificado_LDFLAGS = $(top_srcdir)/lib/cfdi/libinerecfdi.la \
 			$(top_srcdir)/lib/src/libinere.la \
 			$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) -ldl
+
+cadena_SOURCES = cadena.c
+cadena_LDFLAGS = $(top_srcdir)/lib/cfdi/libinerecfdi.la \
+		$(top_srcdir)/lib/src/libinere.la \
+		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) -ldl
+
+comprobante_SOURCES = comprobante.c
+comprobante_LDFLAGS = $(top_srcdir)/lib/cfdi/libinerecfdi.la \
+		$(top_srcdir)/lib/src/libinere.la \
+		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) -ldl
+
 
 INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(CURL_INCLUDES) $(UUID_INCLUDES)
 
