--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -19,4 +19,4 @@ nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cantidades.h \
 
 INCLUDES = -I$(top_srcdir)/include
 
-AM_CFLAGS = -Wall -Wextra -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
+AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
