Library function to read CFDis added

--- a/lib/cfdi/Makefile.am
+++ b/lib/cfdi/Makefile.am
@@ -2,7 +2,7 @@
 
 lib_LTLIBRARIES = libinerecfdi.la
 libinerecfdi_la_SOURCES = verifica_sello_digital.c lee_certificado.c sello.c \
-			  genera_cadena_original.c crea_cfdi.c
+			  genera_cadena_original.c crea_cfdi.c lee_cfdi.c
 
 libinerecfdi_la_LDFLAGS = -version-info 0:1:0
 
@@ -10,7 +10,8 @@ nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cfdi/verifica_sello_di
 			$(top_srcdir)/include/inere/cfdi/lee_certificado.h \
 			$(top_srcdir)/include/inere/cfdi/genera_cadena_original.h \
 			$(top_srcdir)/include/inere/cfdi/sello.h \
-			$(top_srcdir)/include/inere/cfdi/crea_cfdi.h
+			$(top_srcdir)/include/inere/cfdi/crea_cfdi.h \
+			$(top_srcdir)/include/inere/cfdi/lee_cfdi.h
 
 INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(XSLT_INCLUDE)
 
