New implementation to produce numerals

--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -1,15 +1,15 @@
 #
 
 lib_LTLIBRARIES = libinere.la
-libinere_la_SOURCES = cantidades.c homonimia.c numerales.c personafisica.c \
-		      personamoral.c verificador.c util.c extrae_fecha.c \
-		      base64.c
+libinere_la_SOURCES = cantidadcl_alloc.c homonimia.c numeral_alloc.c \
+		      personafisica.c personamoral.c verificador.c util.c \
+		      extrae_fecha.c base64.c
 
 libinere_la_LDFLAGS = -version-info 1:2:0
 
-nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cantidades.h \
+nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cantidadcl_alloc.h \
 		$(top_srcdir)/include/inere/homonimia.h \
-		$(top_srcdir)/include/inere/numerales.h \
+		$(top_srcdir)/include/inere/numeral_alloc.h \
 		$(top_srcdir)/include/inere/personafisica.h \
 		$(top_srcdir)/include/inere/personamoral.h \
 		$(top_srcdir)/include/inere/verificador.h \
